<resources>
    <string name="app_name">Github User</string>
    <string name="user_name">Username</string>
    <string name="followers_format">%d Followers</string>
    <string name="following_format">%d Followings</string>
    <string name="followers">Followers</string>
    <string name="following">Followings</string>
    <string name="searchbar_hint">Mau cari siapa?</string>
    <string name="name">Name</string>
    <string name="setting_text">Setting</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="favorite_text">Favorite</string>
    <string name="save_favorite">Save Favorite?</string>
    <string name="favorite_removed">Favorite Removed</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="error_loading_data">Failed to load data. Please try again later.</string>

    <string name="splash_text">App by @ptrdyp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foto_profile">Foto Profile</string>
</resources>